--- a/src/pages/en/guides/migrate-to-astro/from-sveltekit.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-sveltekit.mdx
@@ -12,11 +12,13 @@ framework: SvelteKit
 
 SvelteKit and Astro share some similarities that will help you migrate your project:
 
-- Both SvelteKit and Astro are modern Javascript static-site generators. Both use a `src/` folder for your project files and a special folder for file-based routing. Creating and managing pages for your site should feel familiar.
+- Both SvelteKit and Astro are modern Javascript static-site generators. 
 
-- Astro has [an official integration for using Svelte components](/en/guides/integrations-guide/svelte/) and support for NPM packages and community integrations, including several for Svelte. You will be able to write Svelte UI components for interactivity, and may be able to keep some or all of your existing components and dependencies.
+- Both SvelteKit and Astro use a `src/` folder for your project files and a [special folder for file-based routing](/en/core-concepts/astro-pages/). Creating and managing pages for your site should feel familiar.
 
-- Astro and SvelteKit both allow you to use a Headless CMS, APIs or Markdown files for data. You can continue to use your preferred authoring system, and will be able to keep your existing content.
+- Astro has [an official integration for using Svelte components](/en/guides/integrations-guide/svelte/) and supports [installing NPM packages](/en/guides/imports/#npm-packages), including several for Svelte. You will be able to write Svelte UI components, and may be able to keep some or all of your existing components and dependencies.
+
+- Astro and SvelteKit both allow you to use a [headless CMS, APIs or Markdown files for data](/en/guides/data-fetching/). You can continue to use your preferred [content authoring](/en/guides/content/) system, and will be able to keep your existing content.
 
 ## Key Differences between SvelteKit and Astro
 
@@ -24,7 +26,7 @@ When you rebuild your SvelteKit site in Astro, you will notice some important di
 
 - SvelteKit is a Svelte-based SPA (single-page application). Astro sites are [multi-page apps](/en/concepts/mpa-vs-spa/) built using `.astro` components, but can also support React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit and raw HTML templating.
 
-- Astro was designed primarily for content-focused sites. An existing SvelteKit app might be built for high client-side interactivity and may include items that are difficult to replicate in Astro, such as dashboards.
+- Astro was designed primarily for [content-focused websites](/en/concepts/why-astro/#content-focused). An existing SvelteKit app might be built for high client-side interactivity and may include items that are difficult to replicate in Astro, such as dashboards.
 
 - Astro includes built-in Markdown support, and includes a special frontmatter YAML `layout` property used per-file for page templating. If you are converting a Sveltekit Markdown-based blog, you will not have to install a separate Markdown integration and you will not set a layout via a configuration file. You can bring your existing Markdown files, but you may need to reorganize as Astro's file-based routing does not require a folder for each page route.
 
