--- a/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
@@ -13,11 +13,17 @@ framework: Docusaurus
 
 Docusaurus and Astro share some similarities that will help you migrate your project:
 
-- Both Astro and Docusaurus are modern, JavaScript-based (Jamstack) site builders intended for content-focused websites, like documentation sites. Both use file-based routing to generate page routes automatically for any MDX file located in `src/pages`. Using Astro's file structure for your existing content and when adding new pages should feel familiar.
+- Both Astro and Docusaurus are modern, JavaScript-based (Jamstack) site builders intended for [content-focused websites](/en/concepts/why-astro/#content-focused), like documentation sites. 
 
-- Both Astro and Docusaurus support [MDX pages](/en/guides/markdown-content/), allowing you to author your content in Markdown while incorporating variables, JSX expressions, and component imports.
+- Both Astro and Docusaurus support [MDX pages](/en/guides/markdown-content/), allowing you to author your content in Markdown while also using variables, JSX expressions, and component imports. You should be able to use your existing `.mdx` files to Astro.
 
-- Astro has [an official integration for using React components](/en/guides/integrations-guide/react/) and support for NPM packages and community integrations, including several for React. You will be able to write React UI components for interactivity, and may be able to keep some or all of your existing components and dependencies. Astro's JSX-like syntax should feel familiar if you are used to writing React.
+- Both Astro and Docusaurus use [file-based routing](/en/core-concepts/routing/) to generate page routes automatically for any MDX file located in `src/pages`. Using Astro's file structure for your existing content and when adding new pages should feel familiar.
+
+- Astro has an [official integration for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
+
+- Astro supports [installing NPM packages](/en/guides/imports/#npm-packages), including several for React. You may be able to keep some or all of your existing React components and dependencies.
+
+- [Astro's JSX-like syntax](/en/core-concepts/astro-components/#the-component-template) should feel familiar if you are used to writing React.
 
 
 ## Key Differences between Docusaurus and Astro
