--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -12,15 +12,15 @@ framework: Gatsby
 
 Gatsby and Astro share some similarities that will help you migrate your project:
 
-- The syntax of `.astro` files is similar to JSX. Writing Astro should feel familiar.
+- [Astro's JSX-like syntax](/en/core-concepts/astro-components/#the-component-template) should feel familiar if you are used to writing React.
 
-- Astro has built-in support for Markdown and an integration for using MDX files. Both Gatsby and Astro use [Remark](https://remark.js.org/) by default for Markdown manipulation and pre-processing, so you can continue to use many of your existing Remark plugins.
+- Astro has built-in support for Markdown and an [integration for using MDX files](). Both Gatsby and Astro use [Remark](https://remark.js.org/) by default for Markdown manipulation and pre-processing, so you can continue to use many of your existing Remark plugins.
 
-- Astro also has [official integrations for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
+- Astro has an [official integrations for using React component](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
 
-- Astro has support for installing NPM packages, including several for React. You may be able to keep some or all of your existing React components and dependencies.
+- Astro supports [installing NPM packages](/en/guides/imports/#npm-packages), including several for React. You may be able to keep some or all of your existing React components and dependencies.
 
-- Astro projects can also be SSG or SSR. (Support for per-page rendering strategy is planned.)
+- Astro projects can also be SSG or [SSR](/en/guides/server-side-rendering/). (Support for per-page rendering strategy is planned.)
 
 ## Key Differences
 
