--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -12,11 +12,16 @@ framework: Next.js
 
 Next.js and Astro share some similarities that will help you migrate your project:
 
-- The syntax of `.astro` files is similar to JSX. Writing Astro should feel familiar.
+- [Astro's JSX-like syntax](/en/core-concepts/astro-components/#the-component-template) should feel familiar if you are used to writing React.
 
-- Both Next.js and Astro are modern Javascript static-site generators. Both use a `src/` folder for your project files and a special folder for file-based routing. Creating and managing pages for your site should feel familiar.
+- Both Next.js and Astro are modern Javascript static-site generators. Both use a `src/` folder for your project files and a [special folder for file-based routing](/en/core-concepts/astro-pages/). Creating and managing pages for your site should feel familiar.
 
-- Astro has [an official integration for using React components](/en/guides/integrations-guide/react/) and support for NPM packages and community integrations, including several for React. You will be able to write React UI components for interactivity, and may be able to keep some or all of your existing components and dependencies.
+- Astro has an [official integration for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
+
+- Astro supports [installing NPM packages](/en/guides/imports/#npm-packages), including several for React. You may be able to keep some or all of your existing React components and dependencies.
+
+
+- Astro projects can also be SSG or [SSR](/en/guides/server-side-rendering/). (Support for per-page rendering strategy is planned.)
 
 
 ## Key Differences
@@ -27,7 +32,7 @@ When you rebuild your Next.js site in Astro, you will notice some important diff
 
 - [Astro components](/en/core-concepts/astro-components/) are not written as exported functions that return page templating. Instead, you'll split your code into a "code fence" and a body exclusively for the HTML you generate.
 
-- [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites. An existing Next.js app might be built for high client-side interactivity and may include items that are difficult to replicate in Astro, such as dashboards.
+- [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for [content-focused websites](/en/concepts/why-astro/#content-focused). An existing Next.js app might be built for high client-side interactivity and may include items that are difficult to replicate in Astro, such as dashboards.
 
 
 ## Switch from Next.js to Astro
