--- a/src/pages/en/guides/migrate-to-astro/from-vuepress.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-vuepress.mdx
@@ -14,9 +14,9 @@ VuePress and Astro share some similarities that will help you migrate your proje
 
 - Both VuePress and Astro are modern Javascript static-site generators with similar project file structures. Both use a special folder for file-based routing. Creating and managing pages for your site should feel familiar.
 
-- Astro and VuePress are both designed for content-focused sites, with excellent built-in support for Markdown files. Writing in Markdown will feel familiar, and you will be able to keep your existing content.
+- Astro and VuePress are both designed for [content-focused websites](/en/concepts/why-astro/#content-focused), with excellent built-in support for Markdown files. Writing in Markdown will feel familiar, and you will be able to keep your existing content.
 
-- Astro has [an official integration for using Vue components](/en/guides/integrations-guide/vue/) and support for NPM packages and community integrations, including several for Vue. You will be able to write Vue UI components for interactivity, and may be able to keep some or all of your existing Vue components and dependencies.
+- Astro has [an official integration for using Vue components](/en/guides/integrations-guide/vue/) and supports [installing NPM packages](/en/guides/imports/#npm-packages), including several for Vue. You will be able to write Vue UI components, and may be able to keep some or all of your existing Vue components and dependencies.
 
 
 ## Key Differences between VuePress and Astro
