more similiarity links and fixes

--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -14,7 +14,7 @@ Next.js and Astro share some similarities that will help you migrate your projec
 
 - [Astro's JSX-like syntax](/en/core-concepts/astro-components/#the-component-template) should feel familiar if you are used to writing React.
 
-- Both Next.js and Astro are modern Javascript static-site generators. Both use a `src/` folder for your project files and a [special folder for file-based routing](/en/core-concepts/astro-pages/). Creating and managing pages for your site should feel familiar.
+- Both Next.js and Astro are modern Javascript static-site generators. Both use a [`src/` folder for your project files](/en/core-concepts/project-structure/#src) and a [special folder for file-based routing](/en/core-concepts/astro-pages/). Creating and managing pages for your site should feel familiar.
 
 - Astro has an [official integration for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
 
