--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -14,7 +14,7 @@ Nuxt and Astro share some similarities that will help you migrate your project:
 
 - Both Nuxt and Astro are modern Javascript static-site generators with similar project file structures.
 
-- Both Nust and Astro use a `src/` folder for your project files and a [special `src/pages/` folder for file-based routing](/en/core-concepts/astro-pages/). Creating and managing pages for your site should feel familiar.
+- Both Nust and Astro use a [`src/` folder for your project files](/en/core-concepts/project-structure/#src) and a [special `src/pages/` folder for file-based routing](/en/core-concepts/astro-pages/). Creating and managing pages for your site should feel familiar.
 
 - Astro has [an official integration for using Vue components](/en/guides/integrations-guide/vue/) and supports [installing NPM packages](/en/guides/imports/#npm-packages), including several for Vue. You will be able to write Vue UI components, and may be able to keep some or all of your existing components and dependencies.
 
