--- a/src/pages/en/guides/migrate-to-astro/from-sveltekit.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-sveltekit.mdx
@@ -14,7 +14,7 @@ SvelteKit and Astro share some similarities that will help you migrate your proj
 
 - Both SvelteKit and Astro are modern Javascript static-site generators. 
 
-- Both SvelteKit and Astro use a `src/` folder for your project files and a [special folder for file-based routing](/en/core-concepts/astro-pages/). Creating and managing pages for your site should feel familiar.
+- Both SvelteKit and Astro use a [`src/` folder for your project files](/en/core-concepts/project-structure/#src) and a [special folder for file-based routing](/en/core-concepts/astro-pages/). Creating and managing pages for your site should feel familiar.
 
 - Astro has [an official integration for using Svelte components](/en/guides/integrations-guide/svelte/) and supports [installing NPM packages](/en/guides/imports/#npm-packages), including several for Svelte. You will be able to write Svelte UI components, and may be able to keep some or all of your existing components and dependencies.
 
