--- a/src/pages/ja/guides/typescript.mdx
+++ b/src/pages/ja/guides/typescript.mdx
@@ -13,7 +13,7 @@ TypeScriptにより、オブジェクトやコンポーネントの形状（shap
 
 AstroプロジェクトでTypeScriptコードを書かなくても、その恩恵を受けられます。Astroは常にコンポーネントのコードをTypeScriptとして扱い、[Astro VSCode拡張機能](/ja/editor-setup/)は自動補完やヒント、エラーをエディタ内で提供するためにできる限りの推論を行います。
 
-Astroの開発サーバーは型チェックを行いませんが、[スクリプトの追加](#型チェック)によりコマンドラインから型エラーをチェックすることができます。
+Astroの開発サーバーは型チェックを行いませんが、[スクリプトの追加](#型チェック)によりコマンドラインから型エラーをチェックできます。
 
 ## 準備
 
