--- a/src/pages/ja/guides/typescript.mdx
+++ b/src/pages/ja/guides/typescript.mdx
@@ -39,7 +39,7 @@ Astroには、`base`、`strict`、`strictest`という3つの拡張可能な`tsc
 
 プロジェクトで[UIフレームワーク](/ja/core-concepts/framework-components/)を使用する場合は、フレームワークに応じた追加の設定が必要かもしれません。詳細については、フレームワークのTypeScriptドキュメントを参照してください。 ([Vue](https://vuejs.org/guide/typescript/overview.html#using-vue-with-typescript)、[React](https://reactjs.org/docs/static-type-checking.html)、[Preact](https://preactjs.com/guide/v10/typescript)、[Solid](https://www.solidjs.com/guides/typescript))
 
-## Typeインポート
+## 型のインポート
 
 可能な限り、明示的な型のインポートとエクスポートを使用しましょう。
 
