--- a/src/pages/ja/guides/typescript.mdx
+++ b/src/pages/ja/guides/typescript.mdx
@@ -48,7 +48,7 @@ import { SomeType } from './script';
 import type { SomeType } from './script';
 ```
 
-こうすることで、Astroのバンドラーがインポートした型をJavaScriptであるかのように誤ってバンドルしようとするようなエッジケースを避けることができます。
+こうすることで、Astroのバンドラーがインポートした型をJavaScriptであるかのように誤ってバンドルするようなエッジケースを避けることができます。
 
 `.tsconfig`ファイルで、TypeScriptにこれを補助させることができます。[`importsNotUsedAsValues`](https://www.typescriptlang.org/tsconfig#importsNotUsedAsValues)を`error`にセットすることで、TypeScriptはインポートをチェックし、いつ`import type`を使うべきか教えてくれるのです。この設定は、`strict`と`strictest`テンプレートにデフォルトで含まれています。
 
