--- a/src/pages/ja/guides/typescript.mdx
+++ b/src/pages/ja/guides/typescript.mdx
@@ -29,7 +29,7 @@ Astroには、`base`、`strict`、`strictest`という3つの拡張可能な`tsc
 }
 ```
 
-また、[Viteのクライアント型](https://vitejs.dev/guide/features.html#client-types)をプロジェクトで利用可能とするために、テンプレートは`src`フォルダ内に`env.d.ts`を配置します。
+また、[Viteのクライアント型](https://vitejs.dev/guide/features.html#client-types)をプロジェクトで利用できるように、テンプレートには`src`フォルダ内に`env.d.ts`が含まれています。
 
 ```typescript title="env.d.ts"
 /// <reference types="astro/client" />
