--- a/src/pages/en/guides/migrate-to-astro/from-eleventy.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-eleventy.mdx
@@ -14,8 +14,7 @@ Eleventy (11ty) and Astro share some similarities that will help you migrate you
 
 - Both Astro and Eleventy are modern, JavaScript-based (Jamstack) site builders.
 
-- Both Astro and Eleventy allow you to author your content in Markdown files, or fetch content from a CMS.
-
+- Astro and Eleventy both allow you to use a [headless CMS, APIs or Markdown files for data](/en/guides/data-fetching/). You can continue to use your preferred [content authoring](/en/guides/content/) system, and will be able to keep your existing content.
 
 - Both Astro and Eleventy build [multi-page apps](/en/concepts/mpa-vs-spa/).
 
@@ -23,13 +22,13 @@ Eleventy (11ty) and Astro share some similarities that will help you migrate you
 
 When you rebuild your Eleventy (11ty) site in Astro, you will notice some important differences:
 
-- Eleventy supports a variety of templating languages. Astro supports including components from several popular JS Frameworks (e.g. React, Svelte, Vue, Solid), but uses Astro layouts, pages and components for most page templating.
+- Eleventy supports a variety of templating languages. Astro supports [including components from several popular JS Frameworks (e.g. React, Svelte, Vue, Solid)](/en/core-concepts/framework-components/), but uses [Astro layouts, pages and components](/en/core-concepts/astro-components/) for most page templating.
 
-- Astro uses a `src/` directory for all files, including site metadata, that are available for querying and processing during site build. `src/pages` is a special folder for file-based routing.
+- Astro uses a [`src/` directory](/en/core-concepts/project-structure/#src) for all files, including site metadata, that are available for querying and processing during site build. Within this is a [special `src/pages/` folder for file-based routing](/en/core-concepts/astro-pages/).
 
-- Astro uses a `public/` folder for static assets that do not need to be processed nor transformed during the build.
+- Astro uses a [`public/` folder for static assets](/en/core-concepts/project-structure/#public) that do not need to be processed nor transformed during the build.
 
-- In Eleventy, bundling CSS, JavaScript, and other assets needs to be configured manually. Astro handles this for you out-of-the-box.
+- In Eleventy, bundling CSS, JavaScript, and other assets needs to be configured manually. [Astro handles this for you out-of-the-box](/en/concepts/why-astro/#fully-featured-but-flexible).
 
 ## Switch from Eleventy to Astro
 
