--- a/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gridsome.mdx
@@ -6,6 +6,8 @@ stub: true
 framework: Gridsome
 ---
 
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
 [Gridsome](https://gridsome.org) is an open-source static site generator built on Vue and GraphQL.
 
 ## Key Similarities between Gridsome and Astro
@@ -32,7 +34,29 @@ When you rebuild your Gridsome site in Astro, you will notice some important dif
 
 ## Switch from Gridsome to Astro
 
-To convert a Gridsome blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/). Bring your existing Markdown (or MDX, with our optional integration) files as content to [create Markdown or MDX pages](/en/guides/markdown-content/).
+To convert a Gridsome blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/).
+
+You can pass a `--template` argument to the `create-astro` command to start a new Astro project from any existing Astro repository on GitHub:
+
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    npm create astro -- --template withastro/blog
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    pnpm create astro --template withastro/blog
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    yarn create astro --template withastro/blog
+    ```
+    </Fragment>
+  </PackageManagerTabs>
+
+Bring your existing Markdown (or MDX, with our optional integration) files as content to [create Markdown or MDX pages](/en/guides/markdown-content/).
 
 Since Gridsome's project structure is similar to Astro's, you may be able to copy several existing files from your project into the same location in your new Astro project. However, the two project structures are not identical. You may want to examine [Astro's project structure](/en/core-concepts/project-structure/) to see what the differences are.
 
