--- a/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
@@ -6,6 +6,8 @@ stub: true
 framework: Jekyll
 ---
 
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
 [Jekyll](https://jekyllrb.com) is a static site generator built on Ruby.
 
 ## Key Similarities between Jekyll and Astro
@@ -30,7 +32,27 @@ When you rebuild your Jekyll site in Astro, you will notice some important diffe
 
 ## Switch from Jekyll to Astro
 
-To convert a Jekyll blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/). 
+To convert a Jekyll blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/).
+
+You can pass a `--template` argument to the `create-astro` command to start a new Astro project from any existing Astro repository on GitHub:
+
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    npm create astro -- --template withastro/blog
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    pnpm create astro --template withastro/blog
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    yarn create astro --template withastro/blog
+    ```
+    </Fragment>
+  </PackageManagerTabs>
 
 Bring your existing Markdown files as content to [create Markdown pages](/en/guides/markdown-content/), using an Astro component layout instead of a Liquid template. Instead of writing `.html` page files directly, you will write `.astro` files in a language that is a super-set of HTML. Much of your existing HTML page content can transfer into [Astro pages](/en/core-concepts/astro-pages/), and you will additionally be able to [use variables, JSX-like expressions and component imports directly in your HTML templating](/en/core-concepts/astro-components/#jsx-like-expressions).
 
