--- a/src/pages/en/guides/migrate-to-astro/from-pelican.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-pelican.mdx
@@ -6,6 +6,8 @@ stub: true
 framework: Pelican
 ---
 
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
 [Pelican](https://getpelican.com) is an open-source static site generator built on Python.
 
 ## Key Similarities between Pelican and Astro
@@ -28,11 +30,33 @@ When you rebuild your Pelican site in Astro, you will notice some important diff
 
 ## Switch from Pelican to Astro
 
-To convert a Pelican documentation site to Astro, start with our official blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/). Bring your existing Markdown content files to [create Markdown pages](/en/guides/markdown-content/). You can still take advantage of [file-based routing](/en/core-concepts/routing/) by copying these documents from Pelican's `content/` folder into `src/pages/` in Astro. You may wish to read about [Astro's project structure](/en/core-concepts/project-structure/) to learn where files should be located.
+To convert a Pelican documentation site to Astro, start with our official blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/). 
+
+You can pass a `--template` argument to the `create-astro` command to start a new Astro project from any existing Astro repository on GitHub:
+
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    npm create astro -- --template withastro/docs
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    pnpm create astro --template withastro/docs
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    yarn create astro --template withastro/docs
+    ```
+    </Fragment>
+  </PackageManagerTabs>
+
+Bring your existing Markdown content files to [create Markdown pages](/en/guides/markdown-content/). You can still take advantage of [file-based routing](/en/core-concepts/routing/) by copying these documents from Pelican's `content/` folder into `src/pages/` in Astro. You may wish to read about [Astro's project structure](/en/core-concepts/project-structure/) to learn where files should be located.
 
 Pelican may have handled much of your site layout and metadata for you. You may wish to read about [building Astro Layouts as Markdown page wrappers](/en/core-concepts/layouts/#markdownmdx-layouts) to see how to manage templating yourself in Astro, including your page `<head>`.
 
-To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
+To convert other types of sites, such as a portfolio or a blog, see more official starter templates on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
 ## Community Resources
 
