--- a/src/pages/en/guides/migrate-to-astro/from-wordpress.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-wordpress.mdx
@@ -5,6 +5,7 @@ layout: ~/layouts/MigrationLayout.astro
 stub: true
 framework: WordPress
 ---
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 [WordPress](https://wordpress.org) is an open-source, personal publishing system built on PHP and MySQL.
 
@@ -34,6 +35,26 @@ When you rebuild your WordPress site in Astro, you will notice some important di
 ## Switch from WordPress to Astro
 
 To convert a WordPress blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes). 
+
+You can pass a `--template` argument to the `create-astro` command to start a new Astro project from any existing Astro repository on GitHub:
+
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    npm create astro -- --template withastro/blog
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    pnpm create astro --template withastro/blog
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    yarn create astro --template withastro/blog
+    ```
+    </Fragment>
+  </PackageManagerTabs>
 
 You can continue to [use your existing WordPress blog as your CMS for Astro](/en/guides/cms/wordpress/), which means you will keep using your WordPress dashboard for writing your posts. Your content will be managed at WordPress, but all other aspects of your Astro site will be built in your code editing environment, and you will [deploy your Astro site](/en/guides/deploy/) separately from your WordPress site. (Be sure to update your domain at your host to keep the same website URL!)
 
