--- a/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
@@ -6,6 +6,8 @@ stub: true
 framework: Docusaurus
 ---
 
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
 [Docusaurus](https://Docusaurus.io) is a popular documentation website builder built on React.
 
 
@@ -15,7 +17,7 @@ Docusaurus and Astro share some similarities that will help you migrate your pro
 
 - Both Astro and Docusaurus are modern, JavaScript-based (Jamstack) site builders intended for [content-focused websites](/en/concepts/why-astro/#content-focused), like documentation sites. 
 
-- Both Astro and Docusaurus support [MDX pages](/en/guides/markdown-content/), allowing you to author your content in Markdown while also using variables, JSX expressions, and component imports. You should be able to use your existing `.mdx` files to Astro.
+- Both Astro and Docusaurus support [MDX pages](/en/guides/markdown-content/). You should be able to use your existing `.mdx` files to Astro.
 
 - Both Astro and Docusaurus use [file-based routing](/en/core-concepts/routing/) to generate page routes automatically for any MDX file located in `src/pages`. Using Astro's file structure for your existing content and when adding new pages should feel familiar.
 
@@ -30,21 +32,43 @@ Docusaurus and Astro share some similarities that will help you migrate your pro
 
 When you rebuild your Docusaurus site in Astro, you will notice some important differences:
 
-- Docusaurus is a React-based single-page application (SPA). Astro sites are [multi-page apps](/en/concepts/mpa-vs-spa/) built using `.astro` components, but can also support React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit and raw HTML templating.
+- Docusaurus is a React-based single-page application (SPA). Astro sites are [multi-page apps](/en/concepts/mpa-vs-spa/) built using [`.astro` components](/en/core-concepts/astro-components/), but can also support [React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit](/en/core-concepts/framework-components/) and raw HTML templating.
 
-- Docusaurus was designed to build documentation websites and has some built-in, documentation-specific website features that you would have to build yourself in Astro. Instead, Astro offers some documentation-specific features through an [official docs theme](https://github.com/withastro/astro/tree/latest/examples/docs). This website was built using that template!
+- Docusaurus was designed to build documentation websites and has some built-in, documentation-specific website features that you would have to build yourself in Astro. Instead, Astro offers some of these features through an [official docs theme](https://github.com/withastro/astro/tree/latest/examples/docs). This website was built using that template! You can also find more [community docs themes](https://astro.build/themes/docs/) with built-in features in our Themes Showcase.
 
-- Docusaurus sites use MDX pages for content which allow you to write a combination of JSX and Markdown (although not all of Markdown's features are supported). Astro's docs theme uses Markdown (`.md`) files by default and does not require you to use MDX. You can optionally install Astro's MDX integration and use `.mdx` files in addition to standard Markdown files.
+- Docusaurus sites use MDX pages for content. Astro's docs theme uses Markdown (`.md`) files by default and does not require you to use MDX. You can optionally [install Astro's MDX integration](/en/guides/integrations-guide/mdx/) and use `.mdx` files in addition to standard Markdown files.
 
 
 ## Switch from Docusaurus to Astro
 
-To convert a Docusaurus documentation site to Astro, start with our official docs theme starter template, or explore more community docs themes in our [theme showcase](https://astro.build/themes/docs/). Add our MDX integration and bring your existing content files to [create MDX pages](/en/guides/markdown-content/). You can still take advantage of [file-based routing](/en/core-concepts/routing/) by copying these documents directly into `src/pages/` in Astro, the same folder you currently use. Create folders with names that correspond to your existing Docusaurus project, and you should be able to keep your existing URLs. 
+To convert a Docusaurus documentation site to Astro, start with our official docs theme starter template, or explore more community docs themes in our [theme showcase](https://astro.build/themes/docs/). 
 
-Docusaurus probably handled much of your site layout and metadata for you. You may wish to read about [building Astro Layouts as Markdown page wrappers](/en/core-concepts/layouts/#markdownmdx-layouts) to see how to manage templating yourself in Astro, including your page `<head>`.
+You can pass a `--template` argument to the `create-astro` command to start a new Astro project from any existing Astro repository on GitHub:
 
-You can find Astro's docs starter, and other templates, on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    npm create astro -- --template withastro/docs
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    pnpm create astro --template withastro/docs
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    yarn create astro --template withastro/docs
+    ```
+    </Fragment>
+  </PackageManagerTabs>
 
+
+Add our MDX integration and bring your existing content files to [create MDX pages](/en/guides/markdown-content/). You can still take advantage of [file-based routing](/en/core-concepts/routing/) by copying these documents directly into `src/pages/` in Astro, the same folder you currently use. Create folders with names that correspond to your existing Docusaurus project, and you should be able to keep your existing URLs. 
+
+Docusaurus probably handled much of your site layout and metadata for you. You may wish to read about [building Astro Layouts as page wrappers for Markdown and MDX](/en/core-concepts/layouts/#markdownmdx-layouts) to see how to manage templating yourself in Astro, including your page `<head>`.
+
+You can find Astro's docs starter, and other official templates, on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
 ## Community Resources
 
