--- a/src/pages/en/guides/migrate-to-astro/from-hugo.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-hugo.mdx
@@ -6,6 +6,8 @@ stub: true
 framework: Hugo
 ---
 
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
 [Hugo](https://gohugo.io) is an open-source static site generator built on Go.
 
 ## Key Similarities between Hugo and Astro
@@ -34,7 +36,27 @@ When you rebuild your Hugo site in Astro, you will notice some important differe
 
 ## Switch from Hugo to Astro
 
-To convert a Hugo blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/). 
+To convert a Hugo blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/).
+
+You can pass a `--template` argument to the `create-astro` command to start a new Astro project from any existing Astro repository on GitHub:
+
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    npm create astro -- --template withastro/blog
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    pnpm create astro --template withastro/blog
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    yarn create astro --template withastro/blog
+    ```
+    </Fragment>
+  </PackageManagerTabs>
 
 Bring your existing Markdown (or MDX, with our optional integration) files as content to [create Markdown or MDX pages](/en/guides/markdown-content/). You may need to convert your frontmatter to YAML, since Astro only allows YAML frontmatter in these files.
 
