--- a/src/pages/en/guides/migrate-to-astro/from-vuepress.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-vuepress.mdx
@@ -5,6 +5,7 @@ layout: ~/layouts/MigrationLayout.astro
 stub: true
 framework: VuePress
 ---
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 [VuePress](https://vuePress.vuejs.org) is an open-source static site generator built on Vue.
 
@@ -31,7 +32,29 @@ When you rebuild your VuePress site in Astro, you will notice some important dif
 
 ## Switch from VuePress to Astro
 
-To convert a Docusaurus documentation site to Astro, start with our official docs theme starter template, or explore more community docs themes in our [theme showcase](https://astro.build/themes/docs/). Bring your existing Markdown content files to [create Markdown pages](/en/guides/markdown-content/). You can still take advantage of [file-based routing](/en/core-concepts/routing/) by moving these documents from `docs` in VuePress to `src/pages/` in Astro. Create folders with names that correspond to your existing VuePress project, and you should be able to keep your existing URLs. 
+To convert a VuePress documentation site to Astro, start with our official docs theme starter template, or explore more community docs themes in our [theme showcase](https://astro.build/themes/docs/). 
+
+You can pass a `--template` argument to the `create-astro` command to start a new Astro project from any existing Astro repository on GitHub:
+
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    npm create astro -- --template withastro/docs
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    pnpm create astro --template withastro/docs
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    yarn create astro --template withastro/docs
+    ```
+    </Fragment>
+  </PackageManagerTabs>
+
+Bring your existing Markdown content files to [create Markdown pages](/en/guides/markdown-content/). You can still take advantage of [file-based routing](/en/core-concepts/routing/) by moving these documents from `docs` in VuePress to `src/pages/` in Astro. Create folders with names that correspond to your existing VuePress project, and you should be able to keep your existing URLs. 
 
 VuePress, or any theme you installed, probably handled much of your site layout and metadata for you. You may wish to read about [building Astro Layouts as Markdown page wrappers](/en/core-concepts/layouts/#markdownmdx-layouts) to see how to manage templating yourself in Astro, including your page `<head>`.
 
