final edit, all SPAs, 4 more to go

--- a/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
@@ -32,7 +32,7 @@ Docusaurus and Astro share some similarities that will help you migrate your pro
 
 When you rebuild your Docusaurus site in Astro, you will notice some important differences:
 
-- Docusaurus is a React-based single-page application (SPA). Astro sites are [multi-page apps](/en/concepts/mpa-vs-spa/) built using [`.astro` components](/en/core-concepts/astro-components/), but can also support [React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit](/en/core-concepts/framework-components/) and raw HTML templating.
+- [MPA vs SPA](/en/concepts/mpa-vs-spa/): Docusaurus is a React-based single-page application (SPA). Astro sites are multi-page apps built using [`.astro` components](/en/core-concepts/astro-components/), but can also support [React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit](/en/core-concepts/framework-components/) and raw HTML templating.
 
 - Docusaurus was designed to build documentation websites and has some built-in, documentation-specific website features that you would have to build yourself in Astro. Instead, Astro offers some of these features through an [official docs theme](https://github.com/withastro/astro/tree/latest/examples/docs). This website was built using that template! You can also find more [community docs themes](https://astro.build/themes/docs/) with built-in features in our Themes Showcase.
 
@@ -68,7 +68,7 @@ Add our MDX integration and bring your existing content files to [create MDX pag
 
 Docusaurus probably handled much of your site layout and metadata for you. You may wish to read about [building Astro Layouts as page wrappers for Markdown and MDX](/en/core-concepts/layouts/#markdownmdx-layouts) to see how to manage templating yourself in Astro, including your page `<head>`.
 
-You can find Astro's docs starter, and other official templates, on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
+You can find Astro's docs starter, and other official templates, on [astro.new](https://astro.new). You'll find a link to each project's GitHub repository, as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
 ## Community Resources
 
