--- a/src/pages/en/guides/migrate-to-astro/from-eleventy.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-eleventy.mdx
@@ -60,7 +60,7 @@ You can pass a `--template` argument to the `create-astro` command to start a ne
 
 Your Eleventy project allowed you to use a variety of templating languages to build your site. In an Astro project, your page templating will mostly be achieved with Astro components, which can be used as UI elements, layouts and even full pages. You may want to explore [Astro's component syntax](/en/core-concepts/astro-components/) to see how to template in Astro using components.
 
-To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
+To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new). You'll find a link to each project's GitHub repository, as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
 ## Community Resources
 
