--- a/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
@@ -56,7 +56,7 @@ You can pass a `--template` argument to the `create-astro` command to start a ne
 
 Bring your existing Markdown files as content to [create Markdown pages](/en/guides/markdown-content/), using an Astro component layout instead of a Liquid template. Instead of writing `.html` page files directly, you will write `.astro` files in a language that is a super-set of HTML. Much of your existing HTML page content can transfer into [Astro pages](/en/core-concepts/astro-pages/), and you will additionally be able to [use variables, JSX-like expressions and component imports directly in your HTML templating](/en/core-concepts/astro-components/#jsx-like-expressions).
 
-To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
+To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new). You'll find a link to each project's GitHub repository, as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
 ## Community Resources
 
