--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -16,7 +16,7 @@ Gatsby and Astro share some similarities that will help you migrate your project
 
 - [Astro's JSX-like syntax](/en/core-concepts/astro-components/#the-component-template) should feel familiar if you are used to writing React.
 
-- Astro has built-in support for Markdown and an [integration for using MDX files](). Both Gatsby and Astro use [Remark](https://remark.js.org/) by default for Markdown manipulation and pre-processing, so you can continue to use many of your existing Remark plugins.
+- Astro has built-in support for Markdown and an [integration for using MDX files](/en/guides/integrations-guide/mdx/). Both Gatsby and Astro use [Remark](https://remark.js.org/) by default for Markdown manipulation and pre-processing, so you can continue to use many of your existing Remark plugins.
 
 - Astro has an [official integrations for using React component](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
 
@@ -28,11 +28,11 @@ Gatsby and Astro share some similarities that will help you migrate your project
 
 When you rebuild your Gatsby site in Astro, you will notice some important differences:
 
-- [MPA vs SPA](/en/concepts/mpa-vs-spa/): Gatsby is a React single-page app, and uses `index.js` as your project's root. Astro is a multi-page site, and `index.astro` is your home page.
+- [MPA vs SPA](/en/concepts/mpa-vs-spa/): Gatsby is a React-based single-page application (SPA). Astro sites are multi-page apps built using [`.astro` components](/en/core-concepts/astro-components/), but can also support [React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit](/en/core-concepts/framework-components/) and raw HTML templating.
 
 - [Astro components](/en/core-concepts/astro-components/) are not written as exported functions that return page templating. Instead, you'll split your code into a "code fence" and a body exclusively for the HTML you generate.
 
-- [Local file data](/en/guides/imports/): Gatsby uses GraphQL to retrieve data from your project files. Astro uses ESM imports and a top-level await [`Astro.glob()`](/en/guides/imports/#astroglob) call to import data from your project files. GraphQL may be optionally added to your Astro project, but is not included by default.
+- [Local file data](/en/guides/imports/): Gatsby uses GraphQL to retrieve data from your project files. Astro uses ESM imports and the [`Astro.glob()`](/en/guides/imports/#astroglob) helper to import data from your project files. GraphQL may be optionally added to your Astro project, but is not included by default.
 
 ## Switch from Gatsby to Astro
 
@@ -62,7 +62,7 @@ Bring your existing Markdown (or MDX, with our optional integration) files as co
 
 While file-based routing and layout components are similar in Astro, you may wish to read about [Astro's project structure](/en/core-concepts/project-structure/) to learn where files should be located. For example, you will need to rename your Gatsby static assets folder from `static/` to `public/`.
 
-To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new) with links to a GitHub repository as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
+To convert other types of sites, such as a portfolio or documentation site, see more official starter templates on [astro.new](https://astro.new). You'll find a link to each project's GitHub repository, as well as one-click links to open a working project in StackBlitz, CodeSandbox and Gitpod online development environments.
 
 ## Community Resources 
 
